--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ Hazard analysis at critical points.</p>
 				<div class="col-md-4 col-0-gutter">
 					<div class="ot-portfolio-item">
 						<figure class="effect-bubba">
-							<img src="images/demo/vip%20toilet%202.jpg" alt="img02" class="img-responsive" />
+							<img src="images/demo/portfolio-1.png" alt="img02" class="img-responsive" />
 							<figcaption>
 								<h2>Dean & Letter</h2>
 								<p>Branding, Design</p>
