--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@ Hazard analysis at critical points.</p>
 						<div class="section-title">
 							<h2>Contact Us</h2>
 							<p>To Get a quote call using any of the numbers below.<br>
-                                Or simply <a href="mailto:name@email.com">Click here</a>.
+                                Or simply <a href="mailto:nkululekomasombuka@gmail.com">Click here</a>.
                                 
                            </p>
 						</div>
@@ -508,7 +508,7 @@ Hazard analysis at critical points.</p>
 							<p>10 timber street, vulindlela heights, mthatha 5099</p>
 							<p><i class="fa fa-phone"></i> 081 518 6400</p>
                             <p><i class="fa fa-whatsapp"></i> +27 65 874 0274</p>
-                            <i class="fa fa-envelope"></i> <a href="mailto:name@email.com">info@roodahbros.co.za</a>
+                            <i class="fa fa-envelope"></i> <a href="mailto:info@roodahbros.co.za">info@roodahbros.co.za</a>
 						</div>
 					</div>
 					<div class="col-md-4">
