--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@ Hazard analysis at critical points.</p>
 						<div class="section-title">
 							<h2>Contact Us</h2>
 							<p>To Get a quote call using any of the numbers below.<br>
-                                Or simply <a href="mailto:nkululekomasombuka@gmail.com">Click here</a>.
+                                Or simply <a href="mailto:info@roodahbros.co.za">Click here</a>.
                                 
                            </p>
 						</div>
